makefile/gen/com/jetbrains/lang/makefile/MakefileParser.java
// This is a generated file. Not intended for manual editing.
package com.jetbrains.lang.makefile;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.jetbrains.lang.makefile.psi.MakefileTypes.*;
import static com.jetbrains.lang.makefile.MakefileParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class MakefileParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return makefile(b, l + 1);
  }

  /* ********************************************************** */
  // !<<eof>> stmt
  static boolean any(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = any_0(b, l + 1);
    p = r; // pin = 1
    r = r && stmt(b, l + 1);
    exit_section_(b, l, m, r, p, MakefileParser::recover);
    return r || p;
  }

  // !<<eof>>
  private static boolean any_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !eof(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '='|':='|'::='|'?='|'!='|'+='
  static boolean assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment")) return false;
    boolean r;
    r = consumeToken(b, ASSIGN);
    if (!r) r = consumeToken(b, ":=");
    if (!r) r = consumeToken(b, "::=");
    if (!r) r = consumeToken(b, "?=");
    if (!r) r = consumeToken(b, "!=");
    if (!r) r = consumeToken(b, "+=");
    return r;
  }

  /* ********************************************************** */
  // stmt*
  public static boolean block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block")) return false;
    Marker m = enter_section_(b, l, _NONE_, BLOCK, "<block>");
    while (true) {
      int c = current_position_(b);
      if (!stmt(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // RECIPE_PREFIX line EOL?
  public static boolean command(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command")) return false;
    if (!nextTokenIs(b, RECIPE_PREFIX)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, COMMAND, null);
    r = consumeToken(b, RECIPE_PREFIX);
    p = r; // pin = 1
    r = r && report_error_(b, line(b, l + 1));
    r = p && command_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // EOL?
  private static boolean command_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_2")) return false;
    consumeToken(b, EOL);
    return true;
  }

  /* ********************************************************** */
  public static boolean comment(PsiBuilder b, int l) {
    Marker m = enter_section_(b);
    exit_section_(b, m, COMMENT, true);
    return true;
  }

  /* ********************************************************** */
  // condition-parens | (condition-body condition-body?)
  public static boolean condition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condition")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONDITION, "<condition>");
    r = condition_parens(b, l + 1);
    if (!r) r = condition_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // condition-body condition-body?
  private static boolean condition_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condition_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = condition_body(b, l + 1);
    r = r && condition_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // condition-body?
  private static boolean condition_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condition_1_1")) return false;
    condition_body(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // variable-usage|function|string|identifier|'='|':'
  static boolean condition_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condition_body")) return false;
    boolean r;
    r = variable_usage(b, l + 1);
    if (!r) r = function(b, l + 1);
    if (!r) r = string(b, l + 1);
    if (!r) r = identifier(b, l + 1);
    if (!r) r = consumeToken(b, ASSIGN);
    if (!r) r = consumeToken(b, COLON);
    return r;
  }

  /* ********************************************************** */
  // '(' (condition-body|',')* ')'
  static boolean condition_parens(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condition_parens")) return false;
    if (!nextTokenIs(b, OPEN_PAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, OPEN_PAREN);
    p = r; // pin = 1
    r = r && report_error_(b, condition_parens_1(b, l + 1));
    r = p && consumeToken(b, CLOSE_PAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (condition-body|',')*
  private static boolean condition_parens_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condition_parens_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!condition_parens_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "condition_parens_1", c)) break;
    }
    return true;
  }

  // condition-body|','
  private static boolean condition_parens_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condition_parens_1_0")) return false;
    boolean r;
    r = condition_body(b, l + 1);
    if (!r) r = consumeToken(b, COMMA);
    return r;
  }

  /* ********************************************************** */
  // conditional-keyword condition EOL block conditional-else* 'endif'
  public static boolean conditional(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONDITIONAL, "<conditional>");
    r = conditional_keyword(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, condition(b, l + 1));
    r = p && report_error_(b, consumeToken(b, EOL)) && r;
    r = p && report_error_(b, block(b, l + 1)) && r;
    r = p && report_error_(b, conditional_4(b, l + 1)) && r;
    r = p && consumeToken(b, KEYWORD_ENDIF) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // conditional-else*
  private static boolean conditional_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!conditional_else(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "conditional_4", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // 'else' (conditional-keyword condition block | EOL? block)
  public static boolean conditional_else(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_else")) return false;
    if (!nextTokenIs(b, KEYWORD_ELSE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONDITIONAL_ELSE, null);
    r = consumeToken(b, KEYWORD_ELSE);
    p = r; // pin = 1
    r = r && conditional_else_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // conditional-keyword condition block | EOL? block
  private static boolean conditional_else_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_else_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = conditional_else_1_0(b, l + 1);
    if (!r) r = conditional_else_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // conditional-keyword condition block
  private static boolean conditional_else_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_else_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = conditional_keyword(b, l + 1);
    r = r && condition(b, l + 1);
    r = r && block(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // EOL? block
  private static boolean conditional_else_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_else_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = conditional_else_1_1_0(b, l + 1);
    r = r && block(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // EOL?
  private static boolean conditional_else_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_else_1_1_0")) return false;
    consumeToken(b, EOL);
    return true;
  }

  /* ********************************************************** */
  // 'ifeq'|'ifneq'|'ifdef'|'ifndef'
  static boolean conditional_keyword(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_keyword")) return false;
    boolean r;
    r = consumeToken(b, KEYWORD_IFEQ);
    if (!r) r = consumeToken(b, KEYWORD_IFNEQ);
    if (!r) r = consumeToken(b, KEYWORD_IFDEF);
    if (!r) r = consumeToken(b, KEYWORD_IFNDEF);
    return r;
  }

  /* ********************************************************** */
  // 'define' variable assignment? EOL (defline EOL)* 'endef'
  public static boolean define(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define")) return false;
    if (!nextTokenIs(b, KEYWORD_DEFINE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DEFINE, null);
    r = consumeToken(b, KEYWORD_DEFINE);
    p = r; // pin = 1
    r = r && report_error_(b, variable(b, l + 1));
    r = p && report_error_(b, define_2(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, EOL)) && r;
    r = p && report_error_(b, define_4(b, l + 1)) && r;
    r = p && consumeToken(b, KEYWORD_ENDEF) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // assignment?
  private static boolean define_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_2")) return false;
    assignment(b, l + 1);
    return true;
  }

  // (defline EOL)*
  private static boolean define_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!define_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "define_4", c)) break;
    }
    return true;
  }

  // defline EOL
  private static boolean define_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "define_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = defline(b, l + 1);
    r = r && consumeToken(b, EOL);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (<<parseLineNotEndef>>|function|variable-usage|substitution|string)*
  static boolean defline(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defline")) return false;
    while (true) {
      int c = current_position_(b);
      if (!defline_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "defline", c)) break;
    }
    return true;
  }

  // <<parseLineNotEndef>>|function|variable-usage|substitution|string
  private static boolean defline_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defline_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parseLineNotEndef(b, l + 1);
    if (!r) r = function(b, l + 1);
    if (!r) r = variable_usage(b, l + 1);
    if (!r) r = substitution(b, l + 1);
    if (!r) r = string(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // define|include|undefine|override|export|unexport|privatevar|vpath
  public static boolean directive(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directive")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DIRECTIVE, "<directive>");
    r = define(b, l + 1);
    if (!r) r = include(b, l + 1);
    if (!r) r = undefine(b, l + 1);
    if (!r) r = override(b, l + 1);
    if (!r) r = export(b, l + 1);
    if (!r) r = unexport(b, l + 1);
    if (!r) r = privatevar(b, l + 1);
    if (!r) r = vpath(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // identifier
  public static boolean directory(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "directory")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DIRECTORY, "<directory>");
    r = identifier(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  public static boolean doc_comment(PsiBuilder b, int l) {
    Marker m = enter_section_(b);
    exit_section_(b, m, DOC_COMMENT, true);
    return true;
  }

  /* ********************************************************** */
  // 'export' (EOL | (variable-assignment|variable+) EOL?)
  public static boolean export(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export")) return false;
    if (!nextTokenIs(b, KEYWORD_EXPORT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KEYWORD_EXPORT);
    r = r && export_1(b, l + 1);
    exit_section_(b, m, EXPORT, r);
    return r;
  }

  // EOL | (variable-assignment|variable+) EOL?
  private static boolean export_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EOL);
    if (!r) r = export_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (variable-assignment|variable+) EOL?
  private static boolean export_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = export_1_1_0(b, l + 1);
    r = r && export_1_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // variable-assignment|variable+
  private static boolean export_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export_1_1_0")) return false;
    boolean r;
    r = variable_assignment(b, l + 1);
    if (!r) r = export_1_1_0_1(b, l + 1);
    return r;
  }

  // variable+
  private static boolean export_1_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export_1_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = variable(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!variable(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "export_1_1_0_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // EOL?
  private static boolean export_1_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "export_1_1_1")) return false;
    consumeToken(b, EOL);
    return true;
  }

  /* ********************************************************** */
  // 'export' variable-assignment
  static boolean exportvar(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exportvar")) return false;
    if (!nextTokenIs(b, KEYWORD_EXPORT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, KEYWORD_EXPORT);
    p = r; // pin = 1
    r = r && variable_assignment(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // identifier
  public static boolean filename(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "filename")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FILENAME, "<filename>");
    r = identifier(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '$' '(' function-name function-param* ')'
  public static boolean function(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function")) return false;
    if (!nextTokenIs(b, DOLLAR)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION, null);
    r = consumeTokens(b, 0, DOLLAR, OPEN_PAREN);
    r = r && function_name(b, l + 1);
    p = r; // pin = 3
    r = r && report_error_(b, function_3(b, l + 1));
    r = p && consumeToken(b, CLOSE_PAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // function-param*
  private static boolean function_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!function_param(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "function_3", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // 'error'|'warning'|'info'|'shell'|'subst'|'patsubst'|'strip'|'findstring'|
  //                     'filter'|'filter-out'|'sort'|'word'|'wordlist'|'words'|'firstword'|'lastword'|'dir'|'notdir'|'suffix'|
  //                     'basename'|'addsuffix'|'addprefix'|'join'|'wildcard'|'realpath'|'abspath'|'if'|'or'|'and'|
  //                     'foreach'|'file'|'call'|'value'|'eval'|'origin'|'flavor'|'guile'
  public static boolean function_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_name")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_NAME, "<function name>");
    r = consumeToken(b, "error");
    if (!r) r = consumeToken(b, "warning");
    if (!r) r = consumeToken(b, "info");
    if (!r) r = consumeToken(b, "shell");
    if (!r) r = consumeToken(b, "subst");
    if (!r) r = consumeToken(b, "patsubst");
    if (!r) r = consumeToken(b, "strip");
    if (!r) r = consumeToken(b, "findstring");
    if (!r) r = consumeToken(b, "filter");
    if (!r) r = consumeToken(b, "filter-out");
    if (!r) r = consumeToken(b, "sort");
    if (!r) r = consumeToken(b, "word");
    if (!r) r = consumeToken(b, "wordlist");
    if (!r) r = consumeToken(b, "words");
    if (!r) r = consumeToken(b, "firstword");
    if (!r) r = consumeToken(b, "lastword");
    if (!r) r = consumeToken(b, "dir");
    if (!r) r = consumeToken(b, "notdir");
    if (!r) r = consumeToken(b, "suffix");
    if (!r) r = consumeToken(b, "basename");
    if (!r) r = consumeToken(b, "addsuffix");
    if (!r) r = consumeToken(b, "addprefix");
    if (!r) r = consumeToken(b, "join");
    if (!r) r = consumeToken(b, "wildcard");
    if (!r) r = consumeToken(b, "realpath");
    if (!r) r = consumeToken(b, "abspath");
    if (!r) r = consumeToken(b, "if");
    if (!r) r = consumeToken(b, "or");
    if (!r) r = consumeToken(b, "and");
    if (!r) r = consumeToken(b, "foreach");
    if (!r) r = consumeToken(b, "file");
    if (!r) r = consumeToken(b, "call");
    if (!r) r = consumeToken(b, "value");
    if (!r) r = consumeToken(b, "eval");
    if (!r) r = consumeToken(b, "origin");
    if (!r) r = consumeToken(b, "flavor");
    if (!r) r = consumeToken(b, "guile");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (string|'$''$'|variable-usage|chars|substitution|','|'|'|function-name|function|assignment|':'|';'|split|'(' function-param ')'|'{'|'}')+
  public static boolean function_param(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, FUNCTION_PARAM, null);
    r = function_param_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!function_param_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "function_param", c)) break;
    }
    exit_section_(b, l, m, r, false, MakefileParser::function_recover);
    return r;
  }

  // string|'$''$'|variable-usage|chars|substitution|','|'|'|function-name|function|assignment|':'|';'|split|'(' function-param ')'|'{'|'}'
  private static boolean function_param_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = string(b, l + 1);
    if (!r) r = parseTokens(b, 0, DOLLAR, DOLLAR);
    if (!r) r = variable_usage(b, l + 1);
    if (!r) r = consumeToken(b, CHARS);
    if (!r) r = substitution(b, l + 1);
    if (!r) r = consumeToken(b, COMMA);
    if (!r) r = consumeToken(b, PIPE);
    if (!r) r = function_name(b, l + 1);
    if (!r) r = function(b, l + 1);
    if (!r) r = assignment(b, l + 1);
    if (!r) r = consumeToken(b, COLON);
    if (!r) r = consumeToken(b, SEMICOLON);
    if (!r) r = consumeToken(b, SPLIT);
    if (!r) r = function_param_0_13(b, l + 1);
    if (!r) r = consumeToken(b, OPEN_CURLY);
    if (!r) r = consumeToken(b, CLOSE_CURLY);
    exit_section_(b, m, null, r);
    return r;
  }

  // '(' function-param ')'
  private static boolean function_param_0_13(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_0_13")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OPEN_PAREN);
    r = r && function_param(b, l + 1);
    r = r && consumeToken(b, CLOSE_PAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // !( ')' | EOL )
  static boolean function_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !function_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ')' | EOL
  private static boolean function_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_recover_0")) return false;
    boolean r;
    r = consumeToken(b, CLOSE_PAREN);
    if (!r) r = consumeToken(b, EOL);
    return r;
  }

  /* ********************************************************** */
  // identifier_part | (<<parseToDollarNoWhitespace>> identifier_part) | <<parseNoWhitespace>>
  public static boolean identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IDENTIFIER, "<identifier>");
    r = identifier_part(b, l + 1);
    if (!r) r = identifier_1(b, l + 1);
    if (!r) r = parseNoWhitespace(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // <<parseToDollarNoWhitespace>> identifier_part
  private static boolean identifier_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parseToDollarNoWhitespace(b, l + 1);
    r = r && identifier_part(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ((function | variable-usage) <<parseToDollarNoWhitespaceBehind>> identifier_part) | ((function | variable-usage) <<parseNoWhitespaceBehind>>)
  static boolean identifier_part(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier_part")) return false;
    if (!nextTokenIs(b, DOLLAR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier_part_0(b, l + 1);
    if (!r) r = identifier_part_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
